# transcript_to_powerpoint

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  ENV_GUIDE.md  README.md  app.py  app_clean.py  docker-compose.yml  env_template.py  env_utils.py  main.py  nginx-single.conf  requirements.txt  test_app.py  testtranscript.txt  transcript.txt
crewai/: app.py  app.py.backup  requirements.txt  text_only_app.py
openai/: README.md  app.py  pyproject.toml  requirements.txt
